--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/tailwindcss": "^0.2.2",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "bcryptjs": "^3.0.2",
+    "lucide-react": "^0.519.0",
     "mongodb": "^5.9.2",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
