--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "twitter-api-v2": "^1.23.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
