--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.2.4",
     "@headlessui/tailwindcss": "^0.2.2",
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "lucide-react": "^0.519.0",
     "mongodb": "^5.9.2",
