--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next-auth/mongodb-adapter": "^1.1.3",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
+    "google-auth-library": "^10.1.0",
     "lucide-react": "^0.519.0",
     "mongodb": "^5.9.2",
     "next": "15.3.4",
