--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.55.0",
     "@headlessui/react": "^2.2.4",
     "@headlessui/tailwindcss": "^0.2.2",
     "@next-auth/mongodb-adapter": "^1.1.3",
@@ -20,6 +21,7 @@
     "next": "15.3.4",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
+    "openai": "^5.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
